# SimpleBinaryTree

./: .gitignore  CMakeLists.txt  README.md
docs/doxygen/: Doxyfile  style.css
include/binarytree/: binary_tree.h  binary_tree.tpp  is_comparable.h  tree_node.h
include/binarytree/concepts/: comparable.h
scripts/: build.py
tests/: CMakeLists.txt  comparable.h  t_comparable_type.h  test_binary_tree.cpp  test_comparable.h
